# quick-ai

./: Cargo.toml  README.md
src/: main.rs
