[package]
name = "quick-ai"
version = "0.1.0"
edition = "2021"
description = "A CLI for getting quick answers to simple questions from OpenAI's API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.3", features = ["cargo"]}
itertools = "0.11.0"
keyring = "2.0.5"
openai = "1.0.0-alpha.13"
tokio = "1.32.0"
